--- a/star-wars-backend/package.json
+++ b/star-wars-backend/package.json
@@ -15,5 +15,13 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "sharp": "^0.33.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  },
+  "scripts": {
+    "test": "jest --coverage"
   }
 }
