--- a/star-wars-blog/package.json
+++ b/star-wars-blog/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "sonner": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
@@ -43,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "sass": "^1.77.8"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
