--- a/star-wars-blog/vercel.json
+++ b/star-wars-blog/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; img-src 'self' data:; connect-src 'self' https://starwars-databank-server.vercel.app/api/v1 https://star-wars-encyclopedia-api.com;"
+                    "value": "default-src 'self'; img-src 'self' data: https://star-wars-encyclopedia-api.com; connect-src 'self' https://starwars-databank-server.vercel.app/api/v1 https://star-wars-encyclopedia-api.com;"
                 },
                 {
                     "key": "Strict-Transport-Security",
