--- a/star-wars-blog/vercel.json
+++ b/star-wars-blog/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' https://starwars-databank-server.vercel.app; img-src 'self' data: https://star-wars-encyclopedia-api.com https://starwars-databank-server.vercel.app; connect-src 'self' https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com;" 
+                    "value": "default-src 'self'; script-src 'self' https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com; img-src 'self' data: https://star-wars-encyclopedia-api.com https://starwars-databank-server.vercel.app; connect-src 'self' https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com;" 
                 },
                 {
                     "key": "Strict-Transport-Security",
