--- a/star-wars-blog/vercel.json
+++ b/star-wars-blog/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; img-src 'self' data: https://lumiere-a.akamaihd.net https://star-wars-encyclopedia-api.com https://starwars-databank-server.vercel.app; connect-src 'self' https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com; frame-src 'self' https://vercel.live; object-src 'self';"
+                    "value": "default-src 'self'; script-src 'self' https://star-wars-encyclopedia-api.com https://vercel.live https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com; img-src 'self' data: https://lumiere-a.akamaihd.net https://star-wars-encyclopedia-api.com https://starwars-databank-server.vercel.app; connect-src 'self' https://starwars-databank-server.vercel.app https://star-wars-encyclopedia-api.com; frame-src 'self' https://vercel.live; object-src 'self';"
                 },
                 {
                     "key": "Strict-Transport-Security",
