--- a/star-wars-blog/vercel.json
+++ b/star-wars-blog/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "object-src 'self';"
+                    "value": "default-src 'self';"
                 },
                 {
                     "key": "Strict-Transport-Security",
