--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,10 +1,13 @@
 name: Backend Tests
 
 on:
+  # Déclenche les tests sur chaque push vers la branche 'main'
   push:
     branches:
       - main
+  # Déclenche les tests lors de l'ouverture, mise à jour, ou réouverture d'une pull request
   pull_request:
+    types: [opened, synchronize, reopened]  # Ne pas tester lors de la fermeture d'une PR, mais lors de son ouverture/synchronisation
 
 jobs:
   test-backend:
@@ -28,3 +31,16 @@ jobs:
       run: |
         cd star-wars-backend
         npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test-backend  # Cette étape dépend de la réussite du job 'test-backend'
+    steps:
+      - name: Trigger webhook for deployment
+        run: |
+          if [ $? -eq 0 ]; then
+            echo "Tests réussis, déclenchement du webhook de déploiement..."
+            curl -X POST https://star-wars-encyclopedia-api.com/webhook
+          else
+            echo "Les tests ont échoué, le déploiement ne sera pas effectué."
+            exit 1
