--- a/star-wars-backend/package.json
+++ b/star-wars-backend/package.json
@@ -15,7 +15,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
