--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,14 +17,14 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20.11.0'
+        node-version: '22.18.0'
 
     - name: Install dependencies
       run: |
-        cd star-wars-backend
+        cd backend
         npm install
 
     - name: Run tests
       run: |
-        cd star-wars-backend
+        cd backend
         npm test
