Installation de curl via le Dockerfile pour le déploiement avec Coolify avec validation du Health Check.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 # Utilise l'image officielle
 FROM node:22.18.0-alpine
 
+# Installer curl
+RUN apk add --no-cache curl
+
 # Définit le répertoire de travail dans le conteneur
 # On l'écrit souvent avec ces deux syntaxes : "/usr/src/app" ou "/www"
 WORKDIR /www
